--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+title: Patoarchitekci
+description: Patoarchitekci, patoarchitekci, nananan... ;-)
+logo: /assets/images/logo.png
+show_downloads: false
+google_analytics: UA-142509712-1
