--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,37 @@
-theme: jekyll-theme-minimal
 title: Patoarchitekci
-description: Patoarchitekci, patoarchitekci, nananan... ;-)
+description: >
+  Patoarchitekci, patoarchitekci, nananan... ;-)
+permalink: ':title/'
+
 logo: /assets/images/logo.png
-show_downloads: false
-google_analytics: UA-142509712-1
+
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: David Freeman # add your name
+author-img: david-freeman.jpg # add your photo
+about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+social-twitter: # add your Twitter handle
+social-facebook: # add your Facebook handle
+social-github: artemsheludko # add your Github handle
+social-linkedin: # add your Linkedin handle
+social-email: # add your Email address
+
+# Disqus
+#discus-identifier: mr-brown # add your discus identifier
+
+# Tracker
+analytics: UA-142509712-1
+
+# Build Settings
+markdown: kramdown
+plugins:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
