--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Patoarchitekci
 description: >
-  Patoarchitekci, patoarchitekci, nananan... ;-)
+  Uwaga, rzucamy mięsem! czyli lekki podcast o chyba poważnym temacie jaki jest nowoczesna architektura w IT
 permalink: ':title/'
 
 logo: /assets/images/logo.png
@@ -9,14 +9,14 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+author: Patoarchitekci # add your name
+author-img: logo.png # add your photo
+about-author: <b>Uwaga, rzucamy mięsem</b>, czyli lekki podcast o niby poważnym temacie jaki jest nowoczesna architektura w IT.
+#social-twitter: # add your Twitter handle
+#social-facebook: # add your Facebook handle
+#social-github: artemsheludko # add your Github handle
+#social-linkedin: # add your Linkedin handle
+social-email: kontakt@patoarchitekci.io
 
 # Disqus
 #discus-identifier: mr-brown # add your discus identifier
