--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://patoarchitekci.io" # the base hostname & protocol for your site, e
 site-twitter: patoarchitekci
 # Author Settings
 author: Patoarchitekci # add your name
-author-img: logo.png # add your photo
+author-img: logo.jpg # add your photo
 about-author: lekki podcast o niby poważnym temacie jakim jest nowoczesna architektura w IT.
 social-facebook: https://facebook.com/patoarchitekci/
 social-github: patoarchitekci # add your Github handle
