--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Patoarchitekci # add your name
 author-img: logo.jpg # add your photo
 about-author: >
   lekki podcast o niby poważnym temacie jakim jest nowoczesna architektura w IT. <br>
-  Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ <a href="https://protopia.tech/">protopia.tech</a>
+  Słuchasz Patoarchitektów dzięki <b>Protopii</b>. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ <a href="https://protopia.tech/">protopia.tech</a>
 social-facebook: https://facebook.com/patoarchitekci/
 social-github: patoarchitekci # add your Github handle
 #social-linkedin: # add your Linkedin handle
