--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ menu:
   url: /gdzie-sluchac/
 - title: O podcaście
   url: /o-podcascie/
+- title: Szkolenia
+  url: /szkolenia/
 - title: Kontakt
   url: mailto:kontakt@patoarchitekci.io
 - title: Regulamin
