--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,7 @@
 {
     "image": "mcr.microsoft.com/devcontainers/universal:2",
-    "postCreateCommand": "bundle install"
+    "postCreateCommand": "bundle install",
+    "features": {
+        "ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
+    }
 }
