Add patonews rss

--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,10 @@ plugins:
 paginate: 5
 paginate_path: "/page/:num"
 
+collections:
+  news:
+    output: false
+
 defaults:
   - scope:
       path: ""
