Add jekyll-redirect-from plugin and create redirect pages for architecture and observability

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jemoji
+  - jekyll-redirect-from
 
 paginate: 5
 paginate_path: "/page/:num"
