--- a/.github/workflows/publish_podcast.yml
+++ b/.github/workflows/publish_podcast.yml
@@ -28,10 +28,7 @@ jobs:
       - name: Run Publish Script
         id: publish_script
         run: |
-          output=$(python scripts/publish_episode.py --episode-number ${{ github.event.inputs.episode_number }})
-          echo "Generated file paths: $output"
-          # Set the output for the next step, ensuring it's a single line
-          echo "files_output=$output" >> $GITHUB_OUTPUT
+          python scripts/publish_episode.py --episode-number ${{ github.event.inputs.episode_number }}
         env:
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
@@ -44,9 +41,8 @@ jobs:
       - name: Commit and Push changes
         uses: EndBug/add-and-commit@v9
         with:
-          # Add the files output by the script
-          # Ensure the output is treated as a string of space-separated paths
-          add: '${{ steps.publish_script.outputs.files_output }}'
+          # Add the directories containing the generated files
+          add: '_posts/ assets/img/'
           commit_message: 'Publish episode ${{ github.event.inputs.episode_number }}'
           default_author: github_actions # Use the default GitHub Actions bot user
           # Ensure pushing to the correct branch (default is usually the branch the workflow runs on)
