Add workflow and scripts for publishing newsletters
- Create a GitHub Actions workflow to publish newsletters from Airtable.
- Add a Python script to fetch newsletter data, process links, and generate markdown files.
- Introduce a new XML file for newsletter RSS feed.
- Update configuration to include newsletters collection.

--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,9 @@ paginate: 5
 paginate_path: "/page/:num"
 
 collections:
+  newsletters:
+    output: false
+    permalink: /newsletter/:title/
   news:
     output: false
 
