Update newsletter title and description; add local environment support and testing script

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,10 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.local
+
+# Local testing scripts
+test_newsletter.sh
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
