Add _social_posts/ directory to git add command in publish workflow

--- a/.github/workflows/publish_newsletter.yml
+++ b/.github/workflows/publish_newsletter.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add _newsletters/ assets/img/mail/
+          git add _newsletters/ assets/img/mail/ _social_posts/
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
