Add episode listing and update markdown generation for Hugo
- Create a new index file for episodes listing with a title and URL.
- Update permalinks in hugo.toml to use contentbasename for episodes and trainings.
- Add a new layout for the episodes list.
- Modify the single episode layout to improve styling and spacing.
- Introduce a new Jinja2 template for generating episode markdown compatible with Hugo.
- Enhance the publish_episode script to fetch linked links and manage image downloads for episode assets.
- Update image paths for social media sharing in the generated markdown.
- Add landscape and square images for episode 160.

--- a/hugo.toml
+++ b/hugo.toml
@@ -64,8 +64,8 @@ title = "PatoArchitekci"
     weight = 5
 
 [permalinks]
-  episodes = "/:filename/"
-  trainings = "/szkolenia/:filename/"
+  episodes = "/:contentbasename/"
+  trainings = "/szkolenia/:contentbasename/"
 
 [markup]
   [markup.goldmark]
