Fix TikTok URL in social media parameters

--- a/hugo.toml
+++ b/hugo.toml
@@ -7,7 +7,7 @@ title = "Patoarchitekci"
   
   # Social media
   [params.social]
-    tiktok = "https://tiktok.com/patoarchitekci"
+    tiktok = "https://tiktok.com/patoarchitekci_"
     discord = "https://discord.com/invite/78zPcEaP22"
     linkedin = "https://www.linkedin.com/company/patoarchitekci/"
     facebook = "https://www.facebook.com/patoarchitekci/"
