--- a/.github/workflows/publish_podcast.yml
+++ b/.github/workflows/publish_podcast.yml
@@ -34,15 +34,14 @@ jobs:
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           EPISODES_TABLE_NAME: ${{ secrets.EPISODES_TABLE_NAME || 'episodes' }} # Allow override via secret, default to 'episodes'
           LINKS_TABLE_NAME: ${{ secrets.LINKS_TABLE_NAME || 'links' }}      # Allow override via secret, default to 'links'
-          TAGS_TABLE_NAME: ${{ secrets.TAGS_TABLE_NAME || 'tags' }}        # Allow override via secret, default to 'tags'
           IS_PUBLISHED_FIELD: ${{ secrets.IS_PUBLISHED_FIELD || 'is_published' }} # Allow override via secret, default to 'is_published'
           # Add other necessary secrets as environment variables
 
       - name: Commit and Push changes
         uses: EndBug/add-and-commit@v9
         with:
-          # Add the directories containing the generated files
-          add: '_posts/ assets/img/'
+          # Add the directories containing the generated files (Hugo structure)
+          add: 'content/episodes/ static/img/'
           message: 'Publish episode ${{ github.event.inputs.episode_number }}'
           default_author: github_actions # Use the default GitHub Actions bot user
           # Ensure pushing to the correct branch (default is usually the branch the workflow runs on)
