Add new trainings for GitHub Actions and Kubernetes; update existing trainings with improved descriptions and organization
- Created a new training for "GitHub Actions w Praktyce" with detailed modules, skills, and benefits.
- Added a new training for "Kubernetes the Hard Way" focusing on manual cluster setup and deep understanding of Kubernetes architecture.
- Updated "Model Context Protocol (MCP) Masterclass" with refined descriptions and new modules for better clarity.
- Enhanced "Modelowanie Danych" training with updated content and adjusted dates.
- Introduced a new training on "Observability" covering modern monitoring tools and techniques.
- Modified the training sorting logic to include date-based sorting for better organization.
- Updated the Hugo configuration for consultation links and added promo code functionality to links.
- Improved the single training page to conditionally display registration buttons based on availability.
- Added a new JavaScript file to handle promo code appending to relevant links.

--- a/data/general_faq.yaml
+++ b/data/general_faq.yaml
@@ -3,15 +3,13 @@ general_faq:
   - question: "Jakie są metody płatności?"
     answer: "Akceptujemy płatności przelewem bankowym, kartą płatniczą oraz PayU. Faktury wystawiamy przed szkoleniem."
   - question: "Czy mogę anulować uczestnictwo?"
-    answer: "Tak, możesz anulować uczestnictwo do 7 dni przed rozpoczęciem szkolenia z pełnym zwrotem środków. W przypadku anulacji w krótszym terminie pobieramy 30% kosztów administracyjnych."
+    answer: "Tak, możesz anulować uczestnictwo do 7 dni przed rozpoczęciem szkolenia z pełnym zwrotem środków. W przypadku anulacji w krótszym terminie możesz wziąć udział w innym szkoleniu lub następnym terminie tego samego szkolenia."
   - question: "Czy otrzymam certyfikat ukończenia?"
     answer: "Tak, każdy uczestnik otrzymuje oficjalny certyfikat ukończenia szkolenia po zakończeniu wszystkich sesji."
   - question: "Co jeśli nie będę mógł uczestniczyć w jednej sesji?"
-    answer: "Wszystkie sesje są nagrywane i będziesz mieć dostęp do nagrań. Dodatkowo możesz umówić się na dodatkową sesję uzupełniającą."
+    answer: "Napisz do nas i poproś o nagranie. Ta opcja dotyczy szkoleń wielodniowych - nie ma możliwości zrobienia nagrań ze wszystkich dni."
   - question: "Czy szkolenie jest realizowane w języku polskim?"
     answer: "Tak, wszystkie nasze szkolenia prowadzone są w języku polskim. Materiały również są przygotowane w języku polskim."
-  - question: "Jak długo mam dostęp do materiałów?"
-    answer: "Dostęp do materiałów i nagrań masz przez 12 miesięcy od zakończenia szkolenia."
   - question: "Czy mogę otrzymać fakturę?"
     answer: "Tak, wystawiamy faktury VAT. Podczas rejestracji podaj dane firmy jeśli chcesz otrzymać fakturę na firmę."
   - question: "Co jeśli szkolenie zostanie odwołane przez organizatora?"
