Enhance SEO and metadata handling: add date fields and JSON-LD structured data for podcast episodes; update publish script to optionally skip image downloads.

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,12 @@
 baseURL = "https://patoarchitekci.io/"
 languageCode = "pl-PL"
 title = "Patoarchitekci"
+enableGitInfo = true
+
+[frontmatter]
+  date = ["date", "publishDate", "lastmod"]
+  lastmod = [":git", "lastmod", "date", "publishDate"]
+  publishDate = ["publishDate", "date"]
 
 [params]
   description = "Stworzyliśmy ten podcast, bo sami szukaliśmy miejsca, które łączy wiedzę, praktykę i dystans do branży IT."
