Fix casing for "Patoarchitekci" in multiple files and ensure consistent title formatting in newsletter

--- a/data/instructors/lukasz-kaluzny.yaml
+++ b/data/instructors/lukasz-kaluzny.yaml
@@ -31,7 +31,7 @@ specialties:
 achievements:
   - "Microsoft Azure MVP"
   - "Certyfikowany trener Microsoft"
-  - "Współtwórca podcastu PatoArchitekci"
+  - "Współtwórca podcastu Patoarchitekci"
   - "Managing Partner w Protopia"
 
 # Szkolenia prowadzone
