--- a/data/instructors/szymon-warda.yaml
+++ b/data/instructors/szymon-warda.yaml
@@ -30,7 +30,7 @@ specialties:
 # Certyfikacje i osiągnięcia
 achievements:
   - "Game Developer (publikowane gry)"
-  - "Współtwórca podcastu PatoArchitekci"
+  - "Współtwórca podcastu Patoarchitekci"
   - "Ekspert systemów rozproszonych"
   - "Mentor i szkoleniowiec"
 
