Add training content and update layout for Grafana workshops

--- a/data/trainings/observability.yaml
+++ b/data/trainings/observability.yaml
@@ -1,6 +1,6 @@
 id: "observability"
-title: "Observability"
-active: true
+title: "Observability - Od APM do Open Source Stack"
+active: false
 featured: false
 
 # Prowadzący i meta
